scripts/bintalk-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bintalk-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      svc: bintalk
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
      maxSurge: 50%
  template:
    metadata:
      labels:
        svc: bintalk
---
apiVersion: v1
kind: Pod
metadata:
  name: bintalk-pod
  labels:
    svc: bintalk
spec:
  containers:
  - name: bintalk-nginx
    image: kilo1089/bintalk-nginx
  - name: bintalk-frontend
    image: kilo1089/bintalk-frontend
  - name: bintalk-backend
    image: kilo1089/bintalk-backend
  - name: bintalk-mariadb
    image: kilo1089/bintalk-mariadb
