scripts/bintalk-deployment.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-bintalk
  labels:
    svc: bintalk
spec:
  containers:
  - name: bintalk-frontend
    image: node:12-alpine
