scripts/path-based-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-path-based
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: lb-bintalk-1660978203.ap-northeast-2.elb.amazonaws.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bintalk-frontend
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: bintalk-backend
            port:
              number: 3000
